@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(convertToDateTime)
 export(createSubjectProfileReport)
 export(getLabelVar)
 export(getLabelVars)
@@ -27,6 +28,7 @@ importFrom(glpgStyle,glpgPaletteCharts)
 importFrom(haven,read_sas)
 importFrom(knitr,knit)
 importFrom(knitr,knit_expand)
+importFrom(plyr,colwise)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(reshape2,melt)
